internal class AnimationString
{
    internal static string s_moveSpeed = "moveSpeed";
    internal static string s_isGrounded = "isGrounded";
    internal static string s_isJump = "isJump";
    internal static string s_isAttack = "isAttack";
    internal static string s_canMove = "canMove";
    internal static string s_hurt = "hurt";
    internal static string s_die = "die";
}